# rawlib

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  QUICKSTART.md  README.md  build.rs
examples/: parallel_processing.rs  usage.rs
libraw/gnu/lib/: libraw.la  libraw_r.la
libraw/msvc/lib/: libraw.exp  libraw.lib  libraw_static.lib
src/: cli.rs  error.rs  exif.rs  ffi.rs  lib.rs  main.rs  parallel.rs  processor.rs  raw_processor.rs  utils.rs
